--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
 
     //noinspection GradleDependency
     implementation 'com.1gravity:android-rteditor:1.6.1'
+
+    //HTML parse dependency
+    implementation 'org.jsoup:jsoup:1.11.3'
 }
